--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
         <module>eureka-client</module>
         <module>consul-client</module>
         <module>eureka-consumer</module>
+        <module>eureka-consumer-ribbon</module>
+        <module>config-server-git</module>
+        <module>config-client</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -27,7 +30,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.7</java.version>
+        <java.version>1.8</java.version>
         <spring-cloud.version>Dalston.SR3</spring-cloud.version>
     </properties>
 
