--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>consul-client</module>
         <module>eureka-consumer</module>
         <module>eureka-consumer-ribbon</module>
+        <module>eureka-consumer-ribbon-hystrix</module>
         <module>config-server-git</module>
         <module>config-client</module>
     </modules>
