--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>eureka-consumer-ribbon-hystrix</module>
         <module>config-server-git</module>
         <module>config-client</module>
+        <module>eureka-consumer-ribbon-feign</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -32,16 +33,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Dalston.SR3</spring-cloud.version>
+        <spring-cloud.version>Dalston.SR5</spring-cloud.version>
     </properties>
 
     <dependencies>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
