--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>config-server-git</module>
         <module>config-client</module>
         <module>eureka-consumer-ribbon-feign</module>
+        <module>eureka-consumer-ribbon-zuul</module>
     </modules>
     <packaging>pom</packaging>
 
