--- a/config-server-git/src/main/resources/application.yml
+++ b/config-server-git/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
 #          password:
 server:
   port: 1201
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
