--- a/consul-client/src/main/resources/application.properties
+++ b/consul-client/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=consul-client
 server.port=2002
 # consul
-spring.cloud.consul.host=localhost
+spring.cloud.consul.host=172.16.13.26
 spring.cloud.consul.port=8500
