--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <module>eureka-consumer-ribbon-hystrix</module>
         <module>config-server-git</module>
         <module>config-client</module>
-        <module>eureka-consumer-ribbon-feign</module>
-        <module>eureka-consumer-ribbon-zuul</module>
+        <module>eureka-consumer-feign</module>
+        <module>eureka-consumer-zuul</module>
     </modules>
     <packaging>pom</packaging>
 
