spring cloud版本更改，jar包依赖写法简化

--- a/consul-client/build.gradle
+++ b/consul-client/build.gradle
@@ -3,6 +3,6 @@ apply plugin: 'war'
 
 description = 'consul-client Maven Webapp'
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-consul-discovery', version:'1.2.3.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.5.7.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
+    compile 'org.springframework.boot:spring-boot-starter-web'
 }
