--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,36 @@
+buildscript {
+    repositories {
+        mavenLocal()
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE"
+    }
+}
+
 allprojects  {
   apply plugin: 'maven'
+    apply plugin: 'idea'
 
   group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+  version = '0.0.1-SNAPSHOT'
 }
 
 subprojects {
   apply plugin: 'java'
-  sourceCompatibility = 1.5
-  targetCompatibility = 1.5
+  apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+
+    dependencyManagement {
+        imports {
+            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+        }
+    }
+
   tasks.withType(JavaCompile) {
   	options.encoding = 'UTF-8'
   }
@@ -16,17 +38,16 @@ subprojects {
   
   repositories {
     mavenLocal()
-    
-    maven { url "http://repo.maven.apache.org/maven2" }
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
   }
 
   
   dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version:'1.5.7.RELEASE'
-    compile group: 'org.projectlombok', name: 'lombok', version:'1.16.18'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version:'1.5.7.RELEASE'
-    testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.5.7.RELEASE') {
-exclude(module: 'commons-logging')
+    compile 'org.springframework.boot:spring-boot-configuration-processor'
+    compile 'org.projectlombok:lombok:1.16.18'
+    compile 'org.springframework.boot:spring-boot-starter-actuator'
+    testCompile('org.springframework.boot:spring-boot-starter-test') {
+        exclude(module: 'commons-logging')
     }
 }
 
