--- a/config-client/build.gradle
+++ b/config-client/build.gradle
@@ -1,8 +1,8 @@
 
 description = ''
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version:'1.3.4.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version:'1.3.6.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp', version:'1.3.1.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version:'1.5.7.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-config'
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+    compile 'org.springframework.boot:spring-boot-starter-aop'
 }
