--- a/config-server-git/build.gradle
+++ b/config-server-git/build.gradle
@@ -1,6 +1,6 @@
 
 description = ''
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-config-server', version:'1.3.4.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version:'1.3.6.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-config-server'
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
 }
