--- a/eureka-consumer-feign/build.gradle
+++ b/eureka-consumer-feign/build.gradle
@@ -1,6 +1,6 @@
 
 description = ''
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version:'1.3.6.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-feign', version:'1.3.6.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile 'org.springframework.cloud:spring-cloud-starter-feign'
 }
