--- a/eureka-consumer-ribbon-hystrix/build.gradle
+++ b/eureka-consumer-ribbon-hystrix/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'war'
 
 description = 'eureka-consumer-ribbon-hystrix Maven Webapp'
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version:'1.3.6.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-ribbon', version:'1.3.6.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version:'1.3.6.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix-dashboard', version:'1.3.6.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile 'org.springframework.cloud:spring-cloud-starter-ribbon'
+    compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
+    compile 'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard'
 }
