--- a/eureka-consumer-ribbon/build.gradle
+++ b/eureka-consumer-ribbon/build.gradle
@@ -3,6 +3,6 @@ apply plugin: 'war'
 
 description = 'eureka-consumer-ribbon Maven Webapp'
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version:'1.3.6.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-ribbon', version:'1.3.6.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile 'org.springframework.cloud:spring-cloud-starter-ribbon'
 }
