--- a/eureka-consumer/build.gradle
+++ b/eureka-consumer/build.gradle
@@ -3,5 +3,5 @@ apply plugin: 'war'
 
 description = 'eureka-consumer Maven Webapp'
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-eureka', version:'1.3.6.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
 }
