--- a/build.gradle
+++ b/build.gradle
@@ -10,20 +10,20 @@ buildscript {
 }
 
 allprojects  {
-  apply plugin: 'maven'
+    apply plugin: 'maven'
     apply plugin: 'idea'
 
-  group = 'com.example'
-  version = '0.0.1-SNAPSHOT'
+    group = 'com.example'
+    version = '0.0.1-SNAPSHOT'
 }
 
 subprojects {
-  apply plugin: 'java'
-  apply plugin: 'org.springframework.boot'
+    apply plugin: 'java'
+    apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
 
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
     dependencyManagement {
         imports {
@@ -31,25 +31,24 @@ subprojects {
         }
     }
 
-  tasks.withType(JavaCompile) {
-  	options.encoding = 'UTF-8'
-  }
-
-  
-  repositories {
-    mavenLocal()
-    maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
-  }
-
-  
-  dependencies {
-    compile 'org.springframework.boot:spring-boot-configuration-processor'
-    compile 'org.projectlombok:lombok:1.16.18'
-    compile 'org.springframework.boot:spring-boot-starter-actuator'
-    testCompile('org.springframework.boot:spring-boot-starter-test') {
-        exclude(module: 'commons-logging')
+    tasks.withType(JavaCompile) {
+    	options.encoding = 'UTF-8'
     }
-}
+
+  
+    repositories {
+        mavenLocal()
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+    }
+
+    dependencies {
+          compile 'org.springframework.boot:spring-boot-configuration-processor'
+          providedCompile 'org.projectlombok:lombok:1.18.2'
+          compile 'org.springframework.boot:spring-boot-starter-actuator'
+          testCompile('org.springframework.boot:spring-boot-starter-test') {
+              exclude(module: 'commons-logging')
+          }
+    }
 
   
 }
