--- a/config-server-git/src/main/resources/application.yml
+++ b/config-server-git/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/forezp/SpringcloudConfig/
-          search-paths: respo
+          uri: https://github.com/2345free/itzone123-config-repo
+          search-paths: demo
 #          username:
 #          password:
 server:
