--- a/eureka-client/build.gradle
+++ b/eureka-client/build.gradle
@@ -1,7 +1,4 @@
-
-apply plugin: 'war'
-
-description = 'eureka-client Maven Webapp'
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 }
