--- a/eureka-consumer-feign/build.gradle
+++ b/eureka-consumer-feign/build.gradle
@@ -1,6 +1,5 @@
-
-description = ''
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
-    compile 'org.springframework.cloud:spring-cloud-starter-feign'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
