--- a/eureka-consumer-ribbon-hystrix/build.gradle
+++ b/eureka-consumer-ribbon-hystrix/build.gradle
@@ -1,10 +1,7 @@
-
-apply plugin: 'war'
-
-description = 'eureka-consumer-ribbon-hystrix Maven Webapp'
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
-    compile 'org.springframework.cloud:spring-cloud-starter-ribbon'
-    compile 'org.springframework.cloud:spring-cloud-starter-hystrix'
-    compile 'org.springframework.cloud:spring-cloud-starter-hystrix-dashboard'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix-dashboard'
 }
