--- a/eureka-consumer-zuul/build.gradle
+++ b/eureka-consumer-zuul/build.gradle
@@ -1,8 +1,5 @@
-
-apply plugin: 'war'
-
-description = 'eureka-consumer-zuul Maven Webapp'
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
-    compile 'org.springframework.cloud:spring-cloud-starter-zuul'
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
 }
