--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include ':config-server-git'
 include ':config-client'
 include ':eureka-consumer-feign'
 include ':eureka-consumer-zuul'
+include 'stream-rabbitmq'
