--- a/stream-rabbitmq/build.gradle
+++ b/stream-rabbitmq/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-stream'
     implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
-    implementation 'com.netflix.hystrix:hystrix-javanica'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support'
 }
