--- a/stream-rabbitmq/src/main/resources/bootstrap.yml
+++ b/stream-rabbitmq/src/main/resources/bootstrap.yml
@@ -1,11 +1,7 @@
 spring:
   application:
-    name: eureka-server
+    name: stream-rabbitmq
 eureka:
-  instance:
-    hostname: localhost
   client:
-    register-with-eureka: false
-    fetch-registry: false
     serviceUrl:
-      defaultZone:  http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:8761/eureka/
