携程apollo配置中心初体验

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':config-client'
 include ':eureka-consumer-feign'
 include ':eureka-consumer-zuul'
 include 'stream-rabbitmq'
+include 'apollo-config'
