--- a/apollo-config/build.gradle
+++ b/apollo-config/build.gradle
@@ -4,4 +4,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     implementation "com.ctrip.framework.apollo:apollo-client:$apolloClientVersion"
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    implementation "io.springfox:springfox-swagger2:$foxSwaggerVersion"
+    implementation "io.springfox:springfox-swagger-ui:$foxSwaggerVersion"
+    implementation "io.springfox:springfox-bean-validators:$foxSwaggerVersion"
 }
