--- a/eureka-consumer-zuul/build.gradle
+++ b/eureka-consumer-zuul/build.gradle
@@ -2,4 +2,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     compile 'org.springframework.cloud:spring-cloud-starter-netflix-zuul'
+
+    implementation "io.springfox:springfox-swagger2:$foxSwaggerVersion"
+    implementation "io.springfox:springfox-swagger-ui:$foxSwaggerVersion"
+    implementation "io.springfox:springfox-bean-validators:$foxSwaggerVersion"
 }
