--- a/stream-rabbitmq/build.gradle
+++ b/stream-rabbitmq/build.gradle
@@ -6,4 +6,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-ribbon'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix'
     testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    implementation "io.springfox:springfox-swagger2:$foxSwaggerVersion"
+    implementation "io.springfox:springfox-swagger-ui:$foxSwaggerVersion"
+    implementation "io.springfox:springfox-bean-validators:$foxSwaggerVersion"
 }
